"""Storage Service gRPC Servicer"""

import logging

logger = logging.getLogger(__name__)


class StorageServiceServicer:
    """gRPC servicer for Storage Service"""
    
    def __init__(self, business_service):
        self.business_service = business_service
        logger.info("StorageServiceServicer initialized")
    
    async def ArchiveData(self, request, context):
        """Archive data to S3"""
        # TODO: Implement ArchiveData
        pass
    
    async def QueryArchive(self, request, context):
        """Query archived data using Athena"""
        # TODO: Implement QueryArchive
        pass
    
    async def GetArchiveStatus(self, request, context):
        """Get status of archival job"""
        # TODO: Implement GetArchiveStatus
        pass
    
    async def ListArchives(self, request, context):
        """List available archives"""
        # TODO: Implement ListArchives
        pass


# TODO: Implement error handling
# TODO: Add authentication check

